# multilangqml

./: CMakeLists.txt  README.md  main.cpp  main.qml  multilangqml_en.ts  multilangqml_ru.ts  translator.cpp  translator.h
